exports[`no-dupe-class-members > invalid 1`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-dupe-class-members",
      "messageId": "unexpected",
      "message": "Duplicate name 'foo() {}'.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 4,
          "column": 3
        },
        "end": {
          "line": 4,
          "column": 11
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-dupe-class-members > invalid 2`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-dupe-class-members",
      "messageId": "unexpected",
      "message": "Duplicate name 'foo() {}'.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 4,
          "column": 3
        },
        "end": {
          "line": 4,
          "column": 11
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-dupe-class-members > invalid 3`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-dupe-class-members",
      "messageId": "unexpected",
      "message": "Duplicate name ''foo'() {}'.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 4,
          "column": 3
        },
        "end": {
          "line": 4,
          "column": 13
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-dupe-class-members > invalid 4`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-dupe-class-members",
      "messageId": "unexpected",
      "message": "Duplicate name '10'.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 4,
          "column": 3
        },
        "end": {
          "line": 4,
          "column": 11
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-dupe-class-members > invalid 5`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-dupe-class-members",
      "messageId": "unexpected",
      "message": "Duplicate name 'foo() {}'.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 4,
          "column": 3
        },
        "end": {
          "line": 4,
          "column": 11
        }
      }
    },
    {
      "ruleName": "no-dupe-class-members",
      "messageId": "unexpected",
      "message": "Duplicate name 'foo() {}'.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 5,
          "column": 3
        },
        "end": {
          "line": 5,
          "column": 11
        }
      }
    }
  ],
  "errorCount": 2,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-dupe-class-members > invalid 6`] = `
{
  "diagnostics": [
    {
      "ruleName": "no-dupe-class-members",
      "messageId": "unexpected",
      "message": "Duplicate name 'static foo() {}'.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 4,
          "column": 3
        },
        "end": {
          "line": 4,
          "column": 18
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`no-dupe-class-members > invalid 7`] = `
{
  "diagnostics": [],
  "errorCount": 0,
  "fileCount": 1,
  "ruleCount": 1
}
`;
